--- a/StandardizedCalculator.csproj
+++ b/StandardizedCalculator.csproj
@@ -10,4 +10,8 @@
     <PlatformTarget>x64</PlatformTarget>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="AngouriMath" Version="1.4.0-preview.3" />
+  </ItemGroup>
+
 </Project>
